<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:fontFamily="@font/urbanist_regular"
        android:title="@string/home" />

    <item
        android:id="@+id/trendingFragment"
        android:icon="@drawable/ic_trending"
        android:fontFamily="@font/urbanist_regular"
        android:title="@string/trending" />

    <item
        android:id="@+id/forYouFragment"
        android:icon="@drawable/ic_recommend"
        android:fontFamily="@font/urbanist_regular"
        android:title="@string/for_you" />

    <item
        android:id="@+id/newSongFragment"
        android:icon="@drawable/ic_music"
        android:fontFamily="@font/urbanist_regular"
        android:title="@string/new_music" />

    <item
        android:id="@+id/likedSongFragment"
        android:icon="@drawable/ic_favorite"
        android:fontFamily="@font/urbanist_regular"
        android:title="@string/liked" />

</menu>